--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <h1>ini branch main</h1>
   <h1>ini branch develop</h1>
   <h1>ini branch fitur 1</h1>
+  <h1>ini branch fitur 1.2</h1>
 </body>
 </html>
